<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@color/white"
    android:id="@+id/scroll"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:id="@+id/rel1">
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                style="?android:attr/progressBarStyle"/>

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="55dp"
                android:text="@string/continue_as_guest"
                android:textColor="@color/pink"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/img1"
                android:layout_width="55dp"
                android:layout_height="48dp"
                android:layout_below="@id/txt1"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/group_1" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img1"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/welcome"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt2"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/enter_phone_password"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/edit1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt3"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="20dp"
                android:focusableInTouchMode="true"
                android:maxLength="8"
                android:backgroundTint="@color/lightgrey"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="20dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColorHint="@color/lightgrey" />
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="40dp"
                android:src="@drawable/warning3"
                android:layout_below="@id/txt3"
                android:layout_marginTop="55dp"
                android:visibility="gone"
                android:layout_alignEnd="@id/edit1"
                android:id="@+id/warning"/>
            <RelativeLayout
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit1"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edit2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:drawablePadding="20dp"
                    android:paddingEnd="40dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:paddingStart="20dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:focusableInTouchMode="true"
                    android:backgroundTint="@color/lightgrey"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColorHint="@color/lightgrey" />
                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/warning3"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="20dp"
                    android:visibility="gone"
                    android:id="@+id/warning1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/edit2"
                    android:layout_alignEnd="@id/edit2"
                    android:text="Show"
                    android:id="@+id/show"
                    android:textColor="@color/blue"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:visibility="invisible" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/frame"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="#1A2DC2BA"
                android:text="@string/signin"
                android:textAllCaps="false"
                android:textColor="@color/grey"
                style="?android:attr/borderlessButtonStyle"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:buttonTint="@color/blue"
                android:textSize="16sp"
                android:textColor="@color/grey"
                android:text="@string/arabic"
                android:textStyle="bold"
                android:id="@+id/check"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/check"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/blue"
                android:textSize="16sp"
                android:textColor="@color/grey"
                android:text="@string/english"
                android:textStyle="bold"
                android:id="@+id/check1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/btn"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/forget_password"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:id="@+id/forget"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/dont_have_account"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txt5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="2dp"
                android:layout_toEndOf="@id/txt4"
                android:text="@string/signup"
                android:textColor="@color/pink"
                android:textSize="14sp"
                android:textStyle="bold"
                />

            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/img_books" />

        </RelativeLayout>

    </RelativeLayout>
</ScrollView>